--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <base href="/">
-  <title>Code Splitting</title>
+    <title>Code Splitting</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </head>
   <body>
     <!-- The mounting div of our React app -->
